<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--搜索框-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_webIcon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/InternetIcon"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/internet" />

            <EditText
                android:id="@+id/editTextText_webUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/webUrl_hint"
                android:inputType="textUri"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <ImageButton
                android:id="@+id/imageButton_refresh"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#01000000"
                android:contentDescription="@string/refresh"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/refresh" />
        </LinearLayout>

        <!--网页视图-->
        <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp">

            <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <!-- 网页进度条 -->
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_x="27dp"
                android:layout_y="250dp"
                android:max="100"
                android:progress="50" />
        </WebView>
        </FrameLayout>

        <!--底部按钮-->
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal|bottom"
        android:background="@color/purple_200">

        <ImageButton
            android:id="@+id/imageButton_goBack"
            android:contentDescription="@string/goBack"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/shangyiye"
            android:background="@color/purple_200"/>

        <ImageButton
            android:id="@+id/imageButton_home"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/purple_200"
            android:contentDescription="@string/homepage"
            android:minHeight="48dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/shouye" />

        <ImageButton
            android:onClick="dialog1"
            android:id="@+id/imageButton_favourite"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/purple_200"
            android:contentDescription="@string/favorite"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/yishoucang" />

        <ImageButton
            android:id="@+id/imageButton_goForward"
            android:contentDescription="@string/goForward"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/xiayiye"
            android:background="@color/purple_200"/>

    </LinearLayout>

    </LinearLayout>

    <!--导航栏-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/NavigationView_nav"
        app:headerLayout="@layout/head"
        app:menu="@menu/menu_nav"
        android:layout_gravity="left"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.drawerlayout.widget.DrawerLayout>

